# advent-of-code

./: .clang-format  .editorconfig  .flake8  .gitignore  .markdownlint.yaml  CMakeLists.txt  CMakePresets.json  README.md
cmake/: options.cmake  packages.cmake  targets.cmake  toolchain-defaults.cmake
src/: CMakeLists.txt
src/day-01/: CMakeLists.txt  lib01.py  main.py  overview.dox  test_01.py
src/day-02/: CMakeLists.txt  lib02.py  main.py  overview.dox  test_02.py
src/day-03/: CMakeLists.txt  lib.cxx  lib.hxx  main.cxx  overview.dox  test.cxx
src/day-04/: CMakeLists.txt  lib.cxx  lib.hxx  main.cxx  overview.dox  test.cxx
src/day-05/: CMakeLists.txt  lib.hxx  lib01.cxx  lib01.hxx  lib02.cxx  lib02.hxx  main.cxx  overview.dox  test.cxx
src/day-06/: CMakeLists.txt  lib.hxx  lib01.cxx  lib01.hxx  lib02.cxx  lib02.hxx  main.cxx  overview.dox  test.cxx
src/day-07/: CMakeLists.txt  lib07.py  main.py  overview.dox  test_07.py
src/day-08/: CMakeLists.txt  lib08.py  main.py  overview.dox  test_08.py
src/day-09/: CMakeLists.txt  lib09.py  main.py  overview.dox  test_09.py
src/day-10/: CMakeLists.txt  lib10.py  main.py  overview.dox  test_10.py
src/day-11/: CMakeLists.txt  lib11.py  main.py  overview.dox  test_11.py
src/lib/: CMakeLists.txt  fios.cxx  fios.hxx  str.cxx  str.hxx
