#
# Copyright (c) 2023 Jamie Kenyon. All Rights Reserved.
# SPDX-License-Identifier: MIT
#

add_subdirectory("lib")

add_subdirectory("day-01")
add_subdirectory("day-02")
add_subdirectory("day-03")
add_subdirectory("day-04")
add_subdirectory("day-05")
add_subdirectory("day-06")
add_subdirectory("day-07")
add_subdirectory("day-08")
add_subdirectory("day-09")
add_subdirectory("day-10")
add_subdirectory("day-11")
